# Electric-wheelchair

./: CMakeLists.txt  Explanation of the initial responsibility  Introduction.md  LICENSE.md  README.md  Team roles and responsibilities  UMS3_support.ufp  UMS3_top.ufp  bottom.stl  code version control.docx  top.stl
electric-wheelchair/: CMakeLists.txt
electric-wheelchair/3D_structure/: UMS3_bottom.ufp
electric-wheelchair/code/Button/: GPIOButton.cpp  readme.txt  test_gpio_button.cpp
electric-wheelchair/code/LED/: LEDController.cpp  LEDController.hpp  readme.txt
electric-wheelchair/code/LightSensor/: LightSensor.cpp  LightSensor.hpp
electric-wheelchair/code/UltrasonicSensor/: UltrasonicSensor.cpp  UltrasonicSensor.hpp  test_ultrasonic.cpp
electric-wheelchair/code/camera/: mjpeg_server.cpp  readme.txt
electric-wheelchair/code/ecg_processor/: ecg_processor.cpp  ecg_processor.hpp  readme.txt
electric-wheelchair/code/http_server/: sensor_http_server.cpp
electric-wheelchair/code/main/: main.cpp  readme.txt
electric-wheelchair/code/motor/: readme.txt
electric-wheelchair/code/pir_sensor/: pir_sensor.hpp  test_pir_sensor.cpp
electric-wheelchair/code/syn6288_controller/: syn6288_controller.cpp  syn6288_controller.hpp  test_tts.cpp
electric-wheelchair/tests/: CMakeLists.txt
electric-wheelchair/tests/Button/: test_gpio_button.cpp
electric-wheelchair/tests/LED/: test_led.cpp
electric-wheelchair/tests/LightSensor/: readme.txt
electric-wheelchair/tests/UltrasonicSensor/: UltrasonicSensor.cpp  test_ultrasonic.cpp
electric-wheelchair/tests/button/: GPIOButton.hpp
electric-wheelchair/tests/camera/: mjpeg_server.cpp  mjpeg_server.hpp  test_mjpeg_server.cpp
electric-wheelchair/tests/ecg/: ecg_app  ecg_processor.cpp  ecg_processor.hpp  ecg_test  main.cpp  reliable_serial_reader.cpp  reliable_serial_reader.hpp
electric-wheelchair/tests/ecg_processor/: ecg_main.cpp
electric-wheelchair/tests/light/: test_light_sensor.cpp
electric-wheelchair/tests/motor/: MotorController.hpp  Motor_test.cpp
electric-wheelchair/tests/pir_sensor/: pir_sensor.cpp  readme.txt
electric-wheelchair/tests/syn6288_controller/: syn6288_controller.cpp
electric-wheelchair/tests/web/: readme.txt
eletric wheel-chair/3D_structure/: 3D_structure.123dx
eletric wheel-chair/code/: LED.7z  LightSensor.cpp  camera_preview.cpp  ecg_processor  ecg_processor.cpp  ecg_processor.hpp  light  main.cpp  motor  motor.cpp  pir_sensor  syn6288_controller.cpp  syn6288_test  ultrasonic.cpp
eletric wheel-chair/code/Button/: GPIOButton.cpp  GPIOButton.hpp
eletric wheel-chair/code/LED/: test_led.cpp
eletric wheel-chair/code/camera/: mjpeg_server.cpp
eletric wheel-chair/code/ecg_processor/: ecg_main.cpp  ecg_processor.cpp
eletric wheel-chair/code/main/: main.cpp  readme.txt
eletric wheel-chair/code/motor/: MotorController.cpp  MotorController.hpp  Motor_test.cpp
eletric wheel-chair/code/syn6288_controller/: readme.txt
eletric wheel-chair/code/ultrasonicsensor/: UltrasonicSensor.hpp  readme.txt  ultrasonic.cpp
eletric wheel-chair/first edition/: camera_preview  camera_preview.cpp  ecg_processor.cpp  ecg_processor.hpp  guangmin.cpp  light.cpp  motor.cpp  pir_sensor.cpp  syn6288_test.hpp  ultrasonic  ultrasonic.cpp  yuyin  yuyin.cpp
